<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/home_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toStartOf="@+id/match_outcome"
            android:layout_toLeftOf="@+id/match_outcome"
            android:text="@string/home_team"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/away_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/home_team"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toStartOf="@+id/match_outcome"
            android:layout_toLeftOf="@+id/match_outcome"
            android:text="@string/away_team"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <ImageView
            android:id="@+id/match_outcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/start_time"
            android:layout_toLeftOf="@id/start_time"
            android:contentDescription="@string/match_outcome"
            android:padding="4dp"
            android:src="@drawable/won"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:fontFamily="monospace"
            android:text="@string/start_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

        <TextView
            android:id="@+id/pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/away_team"
            android:fontFamily="monospace"
            android:text="@string/pick" />

        <TextView
            android:id="@+id/odds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/away_team"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/pick"
            android:layout_toRightOf="@+id/pick"
            android:fontFamily="monospace"
            android:text="@string/odds" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/away_team"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@id/odds"
            android:layout_toRightOf="@id/odds"
            android:fontFamily="monospace"
            android:text="@string/result" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>