<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <ImageView
            android:id="@+id/news_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_football"
            android:contentDescription="@string/heading"/>

        <TextView
            android:id="@+id/news_heading"
            android:layout_below="@+id/news_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/heading" />
        <TextView
            android:id="@+id/first_seen"
            android:layout_below="@+id/news_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_caption"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            />
        <TextView
            android:layout_below="@+id/first_seen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>